manifests/25-server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: react-client-deployment
  labels:
    app: react-client

spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-client
  template:
    metadata:
      labels:
        app: react-client
    spec:
      containers:
        - name: react-client
          image: odysseyprod.azurecr.io/react-client:latest
          tty: true 
          ports:
            - name: web
              containerPort: 80
