manifests/30-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-client-service

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: react-client
